Fix so that the monochrome devices do not use the non-separable blending operations that are used for RGB devices. This was the source of an indeterminism in Bug 690477. Thanks to Marcos for the detailed bug information.

DIFFERENCES EXPECTED:

None. Apparently no other files use the non-separable luminosity
blending.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10228 a1074d23-0009-0410-80fe-cf8c14f379e6